syntax = "proto3";

package calculator;

service CalculatorService {

    // error handling
    // this throw exception if number is negative
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse);
}

message SquareRootRequest{
    int32 number = 1;
}

message SquareRootResponse{
    double number_root = 1;
}